# raytracer-opencl

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  main.h
src/kernels/: fetch.cpp  fetch.h
src/kernels/src/: gradient.cl  intersect_rs.cl  vecsum.cl
src/types/: vector.h
